[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name        = "pyluba"
version     = "0.0.1"
license     = {text = "GNU-3.0"}
description = ""
readme      = "README.md"
authors     = [
    {name = "Michael Arthur", email = "michael@jumblesoft.co.nz"},
    {name = "Jan Dalheimer", email = "jan@dalheimer.de"}
]


requires-python = ">=3.10.0"
dependencies    = [
        "bleak",
        "protobuf",
        "py-jsonic",
        "pydantic",
        "aliyun-python-sdk-iot",
        "aliyun-iot-linkkit",
        "aiohttp"
    ]

[tool.setuptools]
packages = ["pyluba"]

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false


[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version     = "{version}"']
"src/pyluba/__init__.py" = ["{version}"]
"setup.cfg" = ["version = {version}"]
"README.md" = ['\[SemVer {version}\]', 'img.shields.io/static/v1.svg?label=SemVer&message={version}&color=blue']

